--- a/solar-project/package.json
+++ b/solar-project/package.json
@@ -8,6 +8,7 @@
         "body-parser": "^1.18.3",
         "chalk": "^2.4.2",
         "cors": "^2.8.5",
+        "csv-parser": "^2.3.3",
         "debug": "^4.1.1",
         "dotenv": "^8.0.0",
         "ejs": "^3.1.5",
