--- a/solar-project/package.json
+++ b/solar-project/package.json
@@ -3,6 +3,10 @@
     "version": "1.0.0",
     "private": true,
     "main": "server.js",
+    "scripts": {
+        "start" : "npm start",
+        "start-dev" : "nodemon server.js"
+    },
     "dependencies": {
         "assert": "^1.4.1",
         "body-parser": "^1.18.3",
@@ -20,5 +24,8 @@
         "morgan": "^1.9.1",
         "multer": "^1.4.1",
         "mysql": "^2.16.0"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.6"
     }
 }
